# bosch-plr

./: README.md  pyproject.toml
bosch_plr/: __init__.py  checksum.py  device.py  sandbox.py
