[tool.poetry]
name = "bosch-plr"
version = "0.1.0"
description = ""
authors = ["Thomas Oberbichler <thomas.oberbichler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
crc = "^1.1.2"
PyQt6 = "^6.2.3"
qasync = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sandbox = 'bosch_plr.sandbox:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
